# remotectl

./: .directory  AUTHORS  CMakeLists.txt  README.md  loginwindow.cpp  loginwindow.h  mainwindow.ui  remotectl.pro  settingsmanager.cpp  settingsmanager.h  top
src/: connectionmanager.cpp  connectionmanager.h  editor  login  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  top  version.h
